5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3997/executions/1590_1571.log
== SUBMITION (2019-03-26 19:39:55) 
-- CODE:
texto = eu sou linda
print(texto.upper())
-- EXECUTION TIME:
0.219622
-- ERROR:
  File "/home/codebench/codes/1590/1571/main.py", line 1
    texto = eu sou linda
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:40:33) 
-- CODE:
texto = "eu sou linda"
print(texto.upper())
-- EXECUTION TIME:
0.162688
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
EU SOU LINDA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:41:22) 
-- CODE:
texto = "eu sou linda"
print(texto.upper())
-- OUTPUT:
EU SOU LINDA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:41:28) 
-- CODE:
texto = "eu sou linda"
print(texto.upper())
-- EXECUTION TIME:
0.217039
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
EU SOU LINDA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:42:39) 
-- CODE:
texto = "A Ufam existe desde 1909"
print(texto.upper())
-- EXECUTION TIME:
0.115666
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
A UFAM EXISTE DESDE 1909
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:44:04) 
-- CODE:
texto = input("eu sou linda")
print(texto.upper())
-- OUTPUT:
PRIMEIRO_CASO_DE_TESTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:44:07) 
-- CODE:
texto = input("eu sou linda")
print(texto.upper())
-- OUTPUT:
PRIMEIRO_CASO_DE_TESTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:44:16) 
-- CODE:
texto = input("eu sou linda")
print(texto.upper())
-- EXECUTION TIME:
0.19673
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
PRIMEIRO_CASO_DE_TESTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
